--- a/internal/service/cloudformation/schemas/AWS_CodeDeploy_Application.json
+++ b/internal/service/cloudformation/schemas/AWS_CodeDeploy_Application.json
@@ -52,7 +52,11 @@
     "tagOnCreate": true,
     "tagUpdatable": true,
     "cloudFormationSystemTags": false,
-    "tagProperty": "/properties/Tags"
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "codedeploy:TagResource",
+      "codedeploy:UntagResource"
+    ]
   },
   "handlers": {
     "create": {
