--- a/internal/service/cloudformation/schemas/AWS_Config_StoredQuery.json
+++ b/internal/service/cloudformation/schemas/AWS_Config_StoredQuery.json
@@ -81,7 +81,12 @@
     "tagOnCreate": true,
     "tagUpdatable": true,
     "cloudFormationSystemTags": true,
-    "tagProperty": "/properties/Tags"
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "config:TagResource",
+      "config:UntagResource",
+      "config:ListTagsForResource"
+    ]
   },
   "createOnlyProperties": [
     "/properties/QueryName"
