--- a/internal/service/cloudformation/schemas/AWS_DataZone_ProjectMembership.json
+++ b/internal/service/cloudformation/schemas/AWS_DataZone_ProjectMembership.json
@@ -78,7 +78,10 @@
       "type": "string",
       "enum": [
         "PROJECT_OWNER",
-        "PROJECT_CONTRIBUTOR"
+        "PROJECT_CONTRIBUTOR",
+        "PROJECT_CATALOG_VIEWER",
+        "PROJECT_CATALOG_CONSUMER",
+        "PROJECT_CATALOG_STEWARD"
       ]
     },
     "MemberIdentifierType": {
