--- a/internal/service/cloudformation/schemas/AWS_AppConfig_Environment.json
+++ b/internal/service/cloudformation/schemas/AWS_AppConfig_Environment.json
@@ -1,5 +1,4 @@
 {
-  "sourceUrl": "https://github.com/aws-cloudformation/aws-cloudformation-resource-providers-appconfig.git",
   "tagging": {
     "permissions": [
       "appconfig:TagResource",
@@ -12,6 +11,23 @@
     "tagProperty": "/properties/Tags",
     "cloudFormationSystemTags": true
   },
+  "typeName": "AWS::AppConfig::Environment",
+  "readOnlyProperties": [
+    "/properties/EnvironmentId"
+  ],
+  "description": "Resource Type definition for AWS::AppConfig::Environment",
+  "createOnlyProperties": [
+    "/properties/ApplicationId"
+  ],
+  "primaryIdentifier": [
+    "/properties/ApplicationId",
+    "/properties/EnvironmentId"
+  ],
+  "required": [
+    "Name",
+    "ApplicationId"
+  ],
+  "sourceUrl": "https://github.com/aws-cloudformation/aws-cloudformation-resource-providers-appconfig.git",
   "handlers": {
     "read": {
       "permissions": [
@@ -58,19 +74,10 @@
       ]
     }
   },
-  "typeName": "AWS::AppConfig::Environment",
-  "readOnlyProperties": [
-    "/properties/EnvironmentId"
-  ],
-  "description": "Resource Type definition for AWS::AppConfig::Environment",
-  "createOnlyProperties": [
-    "/properties/ApplicationId"
+  "writeOnlyProperties": [
+    "/properties/DeletionProtectionCheck"
   ],
   "additionalProperties": false,
-  "primaryIdentifier": [
-    "/properties/ApplicationId",
-    "/properties/EnvironmentId"
-  ],
   "definitions": {
     "Monitor": {
       "description": "Amazon CloudWatch alarm to monitor during the deployment process.",
@@ -149,6 +156,15 @@
         "$ref": "#/definitions/Monitor"
       }
     },
+    "DeletionProtectionCheck": {
+      "description": "On resource deletion this controls whether the Deletion Protection check should be applied, bypassed, or (the default) whether the behavior should be controlled by the account-level Deletion Protection setting. See https://docs.aws.amazon.com/appconfig/latest/userguide/deletion-protection.html",
+      "type": "string",
+      "enum": [
+        "ACCOUNT_DEFAULT",
+        "APPLY",
+        "BYPASS"
+      ]
+    },
     "ApplicationId": {
       "pattern": "[a-z0-9]{4,7}",
       "description": "The application ID.",
@@ -169,9 +185,5 @@
       "type": "string",
       "maxLength": 64
     }
-  },
-  "required": [
-    "Name",
-    "ApplicationId"
-  ]
+  }
 }
