2024/12/18 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_EMR_StudioSessionMapping.json
+++ b/internal/service/cloudformation/schemas/AWS_EMR_StudioSessionMapping.json
@@ -6,7 +6,7 @@
   "definitions": {
     "IamPolicyArn": {
       "type": "string",
-      "pattern": "^arn:aws(-(cn|us-gov))?:iam::([0-9]{12})?:policy\\/[^.]+$"
+      "pattern": "^arn:aws(-(cn|us-gov|iso-f|iso-e))?:iam::([0-9]{12})?:policy\\/[^.]+$"
     }
   },
   "properties": {
@@ -51,6 +51,12 @@
     "/properties/IdentityType",
     "/properties/IdentityName"
   ],
+  "tagging": {
+    "taggable": false,
+    "tagOnCreate": false,
+    "tagUpdatable": false,
+    "cloudFormationSystemTags": false
+  },
   "handlers": {
     "create": {
       "permissions": [
@@ -63,7 +69,24 @@
         "sso:ListDirectoryAssociations",
         "sso:GetProfile",
         "sso:ListProfiles",
-        "sso:AssociateProfile"
+        "sso:AssociateProfile",
+        "sso:CreateApplication",
+        "sso:PutApplicationAuthenticationMethod",
+        "sso:PutApplicationGrant",
+        "sso:PutApplicationAccessScope",
+        "sso:PutApplicationAssignmentConfiguration",
+        "sso:DescribeApplication",
+        "sso:DeleteApplication",
+        "sso:DeleteApplicationAuthenticationMethod",
+        "sso:DeleteApplicationAccessScope",
+        "sso:DeleteApplicationGrant",
+        "sso:ListInstances",
+        "sso-directory:CreateUser",
+        "sso-directory:CreateGroup",
+        "sso:CreateApplicationAssignment",
+        "sso:DescribeInstance",
+        "sso:DeleteApplicationAssignment",
+        "sso:ListApplicationAssignments"
       ]
     },
     "read": {
