--- a/internal/service/cloudformation/schemas/AWS_Lambda_EventInvokeConfig.json
+++ b/internal/service/cloudformation/schemas/AWS_Lambda_EventInvokeConfig.json
@@ -23,7 +23,7 @@
         "Destination": {
           "description": "The Amazon Resource Name (ARN) of the destination resource.",
           "type": "string",
-          "pattern": "^$|arn:(aws[a-zA-Z0-9-]*):([a-zA-Z0-9\\-])+:([a-z]{2}(-gov)?-[a-z]+-\\d{1})?:(\\d{12})?:(.*)",
+          "pattern": "^$|arn:(aws[a-zA-Z0-9-]*):([a-zA-Z0-9\\-])+:([a-z]{2}(-gov)?(-iso([a-z])?)?-[a-z]+-\\d{1})?:(\\d{12})?:(.*)",
           "minLength": 0,
           "maxLength": 350
         }
@@ -40,7 +40,7 @@
         "Destination": {
           "description": "The Amazon Resource Name (ARN) of the destination resource.",
           "type": "string",
-          "pattern": "^$|arn:(aws[a-zA-Z0-9-]*):([a-zA-Z0-9\\-])+:([a-z]{2}(-gov)?-[a-z]+-\\d{1})?:(\\d{12})?:(.*)",
+          "pattern": "^$|arn:(aws[a-zA-Z0-9-]*):([a-zA-Z0-9\\-])+:([a-z]{2}(-gov)?(-iso([a-z])?)?-[a-z]+-\\d{1})?:(\\d{12})?:(.*)",
           "minLength": 0,
           "maxLength": 350
         }
@@ -58,7 +58,7 @@
     "FunctionName": {
       "description": "The name of the Lambda function.",
       "type": "string",
-      "pattern": "^(arn:(aws[a-zA-Z-]*)?:lambda:)?([a-z]{2}(-gov)?-[a-z]+-\\d{1}:)?(\\d{12}:)?(function:)?([a-zA-Z0-9-_]+)(:(\\$LATEST|[a-zA-Z0-9-_]+))?$"
+      "pattern": "^(arn:(aws[a-zA-Z-]*)?:lambda:)?([a-z]{2}(-gov)?(-iso([a-z])?)?-[a-z]+-\\d{1}:)?(\\d{12}:)?(function:)?([a-zA-Z0-9-_]+)(:(\\$LATEST|[a-zA-Z0-9-_]+))?$"
     },
     "MaximumEventAgeInSeconds": {
       "description": "The maximum age of a request that Lambda sends to a function for processing.",
