2025/01/08 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_Backup_LogicallyAirGappedBackupVault.json
+++ b/internal/service/cloudformation/schemas/AWS_Backup_LogicallyAirGappedBackupVault.json
@@ -95,7 +95,9 @@
   ],
   "readOnlyProperties": [
     "/properties/BackupVaultArn",
-    "/properties/EncryptionKeyArn"
+    "/properties/EncryptionKeyArn",
+    "/properties/VaultState",
+    "/properties/VaultType"
   ],
   "primaryIdentifier": [
     "/properties/BackupVaultName"
