--- a/internal/service/cloudformation/schemas/AWS_RefactorSpaces_Application.json
+++ b/internal/service/cloudformation/schemas/AWS_RefactorSpaces_Application.json
@@ -189,10 +189,6 @@
         "apigateway:POST",
         "apigateway:PUT",
         "apigateway:UpdateRestApiPolicy",
-        "apigateway:Update*",
-        "apigateway:Delete*",
-        "apigateway:Get*",
-        "apigateway:Put*",
         "elasticloadbalancing:CreateLoadBalancer",
         "elasticloadbalancing:DescribeLoadBalancers",
         "elasticloadbalancing:DescribeTags",
@@ -220,10 +216,10 @@
         "ec2:DeleteTags",
         "ec2:RevokeSecurityGroupIngress",
         "elasticloadbalancing:DeleteLoadBalancer",
-        "apigateway:Update*",
-        "apigateway:Delete*",
-        "apigateway:Get*",
-        "apigateway:Put*"
+        "apigateway:DELETE",
+        "apigateway:GET",
+        "apigateway:PUT",
+        "apigateway:UpdateRestApiPolicy"
       ]
     },
     "list": {
