--- a/internal/service/cloudformation/schemas/AWS_SES_ConfigurationSet.json
+++ b/internal/service/cloudformation/schemas/AWS_SES_ConfigurationSet.json
@@ -11,6 +11,11 @@
         "CustomRedirectDomain": {
           "type": "string",
           "description": "The domain to use for tracking open and click events."
+        },
+        "HttpsPolicy": {
+          "type": "string",
+          "description": "The https policy to use for tracking open and click events.",
+          "pattern": "REQUIRE|REQUIRE_OPEN_ONLY|OPTIONAL"
         }
       }
     },
