--- a/internal/service/cloudformation/schemas/AWS_VpcLattice_ResourceConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_VpcLattice_ResourceConfiguration.json
@@ -113,7 +113,7 @@
       ]
     },
     "ArnResource": {
-      "pattern": "",
+      "pattern": "^arn.*",
       "type": "string",
       "maxLength": 1224
     },
