--- a/internal/service/cloudformation/schemas/AWS_ResilienceHub_App.json
+++ b/internal/service/cloudformation/schemas/AWS_ResilienceHub_App.json
@@ -162,6 +162,11 @@
       "description": "Amazon Resource Name (ARN) of the Resiliency Policy.",
       "pattern": ""
     },
+    "RegulatoryPolicyArn": {
+      "type": "string",
+      "description": "Amazon Resource Name (ARN) of the Regulatory Policy.",
+      "pattern": ""
+    },
     "Tags": {
       "$ref": "#/definitions/TagMap"
     },
@@ -216,7 +221,12 @@
     "tagOnCreate": true,
     "tagUpdatable": true,
     "cloudFormationSystemTags": true,
-    "tagProperty": "/properties/Tags"
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "resiliencehub:TagResource",
+      "resiliencehub:ListTagsForResource",
+      "resiliencehub:UntagResource"
+    ]
   },
   "additionalProperties": false,
   "required": [
@@ -256,7 +266,17 @@
         "sns:GetTopicAttributes",
         "route53:List*",
         "iam:PassRole",
-        "resiliencehub:*"
+        "resiliencehub:CreateApp",
+        "resiliencehub:DescribeApp",
+        "resiliencehub:DescribeAppVersionTemplate",
+        "resiliencehub:PutDraftAppVersionTemplate",
+        "resiliencehub:AddDraftAppVersionResourceMappings",
+        "resiliencehub:ListAppVersionResourceMappings",
+        "resiliencehub:ListAppVersions",
+        "resiliencehub:PublishAppVersion",
+        "resiliencehub:ListTagsForResource",
+        "resiliencehub:TagResource",
+        "resiliencehub:UntagResource"
       ]
     },
     "read": {
@@ -289,7 +309,18 @@
         "sns:GetTopicAttributes",
         "route53:List*",
         "iam:PassRole",
-        "resiliencehub:*"
+        "resiliencehub:UpdateApp",
+        "resiliencehub:DescribeApp",
+        "resiliencehub:DescribeAppVersionTemplate",
+        "resiliencehub:PutDraftAppVersionTemplate",
+        "resiliencehub:AddDraftAppVersionResourceMappings",
+        "resiliencehub:RemoveDraftAppVersionResourceMappings",
+        "resiliencehub:ListAppVersionResourceMappings",
+        "resiliencehub:ListAppVersions",
+        "resiliencehub:PublishAppVersion",
+        "resiliencehub:ListTagsForResource",
+        "resiliencehub:TagResource",
+        "resiliencehub:UntagResource"
       ]
     },
     "delete": {
